feat: remove license checking and remove limitations
