# proto/gen/apidocs.swagger.yaml
@@ -7,7 +7,6 @@ tags:
   - name: AuthService
   - name: CollectionService
   - name: ShortcutService
-  - name: SubscriptionService
   - name: UserSettingService
   - name: WorkspaceService
 consumes:
@@ -151,7 +150,7 @@ paths:
         "200":
           description: A successful response.
           schema:
-            $ref: '#/definitions/apiv1Collection'
+            $ref: '#/definitions/apiV1Collection'
         default:
           description: An unexpected error response.
           schema:
@@ -161,7 +160,7 @@ paths:
           in: body
           required: true
           schema:
-            $ref: '#/definitions/apiv1Collection'
+            $ref: '#/definitions/apiV1Collection'
       tags:
         - CollectionService
   /api/v1/collections/{collection.id}:
@@ -172,7 +171,7 @@ paths:
         "200":
           description: A successful response.
           schema:
-            $ref: '#/definitions/apiv1Collection'
+            $ref: '#/definitions/apiV1Collection'
         default:
           description: An unexpected error response.
           schema:
@@ -210,7 +209,7 @@ paths:
                   type: integer
                   format: int32
               visibility:
-                $ref: '#/definitions/apiv1Visibility'
+                $ref: '#/definitions/apiV1Visibility'
         - name: updateMask
           in: query
           required: false
@@ -225,7 +224,7 @@ paths:
         "200":
           description: A successful response.
           schema:
-            $ref: '#/definitions/apiv1Collection'
+            $ref: '#/definitions/apiV1Collection'
         default:
           description: An unexpected error response.
           schema:
@@ -281,7 +280,7 @@ paths:
         "200":
           description: A successful response.
           schema:
-            $ref: '#/definitions/apiv1Shortcut'
+            $ref: '#/definitions/apiV1Shortcut'
         default:
           description: An unexpected error response.
           schema:
@@ -291,7 +290,7 @@ paths:
           in: body
           required: true
           schema:
-            $ref: '#/definitions/apiv1Shortcut'
+            $ref: '#/definitions/apiV1Shortcut'
       tags:
         - ShortcutService
   /api/v1/shortcuts/{id}:
@@ -302,7 +301,7 @@ paths:
         "200":
           description: A successful response.
           schema:
-            $ref: '#/definitions/apiv1Shortcut'
+            $ref: '#/definitions/apiV1Shortcut'
         default:
           description: An unexpected error response.
           schema:
@@ -365,7 +364,7 @@ paths:
         "200":
           description: A successful response.
           schema:
-            $ref: '#/definitions/apiv1Shortcut'
+            $ref: '#/definitions/apiV1Shortcut'
         default:
           description: An unexpected error response.
           schema:
@@ -404,7 +403,7 @@ paths:
               description:
                 type: string
               visibility:
-                $ref: '#/definitions/apiv1Visibility'
+                $ref: '#/definitions/apiV1Visibility'
               viewCount:
                 type: integer
                 format: int32
@@ -577,7 +576,7 @@ paths:
         "200":
           description: A successful response.
           schema:
-            $ref: '#/definitions/apiv1UserSetting'
+            $ref: '#/definitions/apiV1UserSetting'
         default:
           description: An unexpected error response.
           schema:
@@ -598,7 +597,7 @@ paths:
         "200":
           description: A successful response.
           schema:
-            $ref: '#/definitions/apiv1UserSetting'
+            $ref: '#/definitions/apiV1UserSetting'
         default:
           description: An unexpected error response.
           schema:
@@ -615,7 +614,7 @@ paths:
           in: body
           required: true
           schema:
-            $ref: '#/definitions/apiv1UserSetting'
+            $ref: '#/definitions/apiV1UserSetting'
       tags:
         - UserSettingService
   /api/v1/users/{user.id}:
@@ -681,7 +680,7 @@ paths:
         "200":
           description: A successful response.
           schema:
-            $ref: '#/definitions/apiv1WorkspaceSetting'
+            $ref: '#/definitions/apiV1WorkspaceSetting'
         default:
           description: An unexpected error response.
           schema:
@@ -694,7 +693,7 @@ paths:
         "200":
           description: A successful response.
           schema:
-            $ref: '#/definitions/apiv1WorkspaceSetting'
+            $ref: '#/definitions/apiV1WorkspaceSetting'
         default:
           description: An unexpected error response.
           schema:
@@ -705,58 +704,9 @@ paths:
           in: body
           required: true
           schema:
-            $ref: '#/definitions/apiv1WorkspaceSetting'
+            $ref: '#/definitions/apiV1WorkspaceSetting'
       tags:
         - WorkspaceService
-  /v1/subscription:
-    get:
-      summary: GetSubscription gets the current subscription of Slash instance.
-      operationId: SubscriptionService_GetSubscription
-      responses:
-        "200":
-          description: A successful response.
-          schema:
-            $ref: '#/definitions/v1Subscription'
-        default:
-          description: An unexpected error response.
-          schema:
-            $ref: '#/definitions/rpcStatus'
-      tags:
-        - SubscriptionService
-    delete:
-      summary: DeleteSubscription deletes the subscription.
-      operationId: SubscriptionService_DeleteSubscription
-      responses:
-        "200":
-          description: A successful response.
-          schema:
-            $ref: '#/definitions/v1Subscription'
-        default:
-          description: An unexpected error response.
-          schema:
-            $ref: '#/definitions/rpcStatus'
-      tags:
-        - SubscriptionService
-    patch:
-      summary: UpdateSubscription updates the subscription.
-      operationId: SubscriptionService_UpdateSubscription
-      responses:
-        "200":
-          description: A successful response.
-          schema:
-            $ref: '#/definitions/v1Subscription'
-        default:
-          description: An unexpected error response.
-          schema:
-            $ref: '#/definitions/rpcStatus'
-      parameters:
-        - name: body
-          in: body
-          required: true
-          schema:
-            $ref: '#/definitions/v1UpdateSubscriptionRequest'
-      tags:
-        - SubscriptionService
 definitions:
   GetShortcutAnalyticsResponseAnalyticsItem:
     type: object
@@ -778,7 +728,7 @@ definitions:
         description: |-
           expires_at is the expiration time of the access token.
           If expires_at is not set, the access token will never expire.
-  apiv1Collection:
+  apiV1Collection:
     type: object
     properties:
       id:
@@ -805,8 +755,8 @@ definitions:
           type: integer
           format: int32
       visibility:
-        $ref: '#/definitions/apiv1Visibility'
-  apiv1IdentityProvider:
+        $ref: '#/definitions/v1Visibility'
+  apiV1IdentityProvider:
     type: object
     properties:
       id:
@@ -815,22 +765,22 @@ definitions:
       title:
         type: string
       type:
-        $ref: '#/definitions/apiv1IdentityProviderType'
+        $ref: '#/definitions/v1IdentityProviderType'
       config:
-        $ref: '#/definitions/apiv1IdentityProviderConfig'
-  apiv1IdentityProviderConfig:
+        $ref: '#/definitions/apiV1IdentityProviderConfig'
+  apiV1IdentityProviderConfig:
     type: object
     properties:
       oauth2:
-        $ref: '#/definitions/apiv1IdentityProviderConfigOAuth2Config'
-  apiv1IdentityProviderConfigFieldMapping:
+        $ref: '#/definitions/apiV1IdentityProviderConfigOAuth2Config'
+  apiV1IdentityProviderConfigFieldMapping:
     type: object
     properties:
       identifier:
         type: string
       displayName:
         type: string
-  apiv1IdentityProviderConfigOAuth2Config:
+  apiV1IdentityProviderConfigOAuth2Config:
     type: object
     properties:
       clientId:
@@ -848,14 +798,8 @@ definitions:
         items:
           type: string
       fieldMapping:
-        $ref: '#/definitions/apiv1IdentityProviderConfigFieldMapping'
-  apiv1IdentityProviderType:
-    type: string
-    enum:
-      - TYPE_UNSPECIFIED
-      - OAUTH2
-    default: TYPE_UNSPECIFIED
-  apiv1Shortcut:
+        $ref: '#/definitions/apiV1IdentityProviderConfigFieldMapping'
+  apiV1Shortcut:
     type: object
     properties:
       id:
@@ -883,32 +827,32 @@ definitions:
       description:
         type: string
       visibility:
-        $ref: '#/definitions/apiv1Visibility'
+        $ref: '#/definitions/v1Visibility'
       viewCount:
         type: integer
         format: int32
       ogMetadata:
         $ref: '#/definitions/v1ShortcutOpenGraphMetadata'
-  apiv1UserSetting:
+  apiV1UserSetting:
     type: object
     properties:
       userId:
         type: integer
         format: int32
       general:
-        $ref: '#/definitions/apiv1UserSettingGeneralSetting'
+        $ref: '#/definitions/apiV1UserSettingGeneralSetting'
       accessTokens:
-        $ref: '#/definitions/apiv1UserSettingAccessTokensSetting'
-  apiv1UserSettingAccessTokensSetting:
+        $ref: '#/definitions/apiV1UserSettingAccessTokensSetting'
+  apiV1UserSettingAccessTokensSetting:
     type: object
     properties:
       accessTokens:
         type: array
         items:
           type: object
-          $ref: '#/definitions/apiv1UserSettingAccessTokensSettingAccessToken'
+          $ref: '#/definitions/apiV1UserSettingAccessTokensSettingAccessToken'
         title: Nested repeated field
-  apiv1UserSettingAccessTokensSettingAccessToken:
+  apiV1UserSettingAccessTokensSettingAccessToken:
     type: object
     properties:
       accessToken:
@@ -917,21 +861,14 @@ definitions:
       description:
         type: string
         description: A description for the access token.
-  apiv1UserSettingGeneralSetting:
+  apiV1UserSettingGeneralSetting:
     type: object
     properties:
       locale:
         type: string
       colorTheme:
         type: string
-  apiv1Visibility:
-    type: string
-    enum:
-      - VISIBILITY_UNSPECIFIED
-      - WORKSPACE
-      - PUBLIC
-    default: VISIBILITY_UNSPECIFIED
-  apiv1WorkspaceSetting:
+  apiV1WorkspaceSetting:
     type: object
     properties:
       instanceUrl:
@@ -942,13 +879,13 @@ definitions:
         format: byte
         description: The workspace custome branding.
       defaultVisibility:
-        $ref: '#/definitions/apiv1Visibility'
+        $ref: '#/definitions/v1Visibility'
         description: The default visibility of shortcuts and collections.
       identityProviders:
         type: array
         items:
           type: object
-          $ref: '#/definitions/apiv1IdentityProvider'
+          $ref: '#/definitions/apiV1IdentityProvider'
         description: The identity providers.
       disallowUserRegistration:
         type: boolean
@@ -996,6 +933,12 @@ definitions:
         items:
           type: object
           $ref: '#/definitions/GetShortcutAnalyticsResponseAnalyticsItem'
+  v1IdentityProviderType:
+    type: string
+    enum:
+      - TYPE_UNSPECIFIED
+      - OAUTH2
+    default: TYPE_UNSPECIFIED
   v1ListCollectionsResponse:
     type: object
     properties:
@@ -1003,7 +946,7 @@ definitions:
         type: array
         items:
           type: object
-          $ref: '#/definitions/apiv1Collection'
+          $ref: '#/definitions/apiV1Collection'
   v1ListShortcutsResponse:
     type: object
     properties:
@@ -1011,7 +954,7 @@ definitions:
         type: array
         items:
           type: object
-          $ref: '#/definitions/apiv1Shortcut'
+          $ref: '#/definitions/apiV1Shortcut'
   v1ListUserAccessTokensResponse:
     type: object
     properties:
@@ -1028,14 +971,6 @@ definitions:
         items:
           type: object
           $ref: '#/definitions/v1User'
-  v1PlanType:
-    type: string
-    enum:
-      - PLAN_TYPE_UNSPECIFIED
-      - FREE
-      - PRO
-      - ENTERPRISE
-    default: PLAN_TYPE_UNSPECIFIED
   v1Role:
     type: string
     enum:
@@ -1059,44 +994,6 @@ definitions:
       - ACTIVE
       - INACTIVE
     default: STATE_UNSPECIFIED
-  v1Subscription:
-    type: object
-    properties:
-      plan:
-        $ref: '#/definitions/v1PlanType'
-        readOnly: true
-      startedTime:
-        type: string
-        format: date-time
-        readOnly: true
-      expiresTime:
-        type: string
-        format: date-time
-        readOnly: true
-      features:
-        type: array
-        items:
-          type: string
-        readOnly: true
-      seats:
-        type: integer
-        format: int32
-        readOnly: true
-      shortcutsLimit:
-        type: integer
-        format: int32
-        readOnly: true
-      collectionsLimit:
-        type: integer
-        format: int32
-        readOnly: true
-  v1UpdateSubscriptionRequest:
-    type: object
-    properties:
-      licenseKey:
-        type: string
-    required:
-      - licenseKey
   v1User:
     type: object
     properties:
@@ -1132,6 +1029,13 @@ definitions:
       expiresAt:
         type: string
         format: date-time
+  v1Visibility:
+    type: string
+    enum:
+      - VISIBILITY_UNSPECIFIED
+      - WORKSPACE
+      - PUBLIC
+    default: VISIBILITY_UNSPECIFIED
   v1WorkspaceProfile:
     type: object
     properties:
@@ -1146,9 +1050,6 @@ definitions:
         title: |-
           The owner name.
           Format: "users/{id}"
-      subscription:
-        $ref: '#/definitions/v1Subscription'
-        description: The workspace subscription.
       branding:
         type: string
         format: byte
